--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>９章演習問題</title>
+  <title>10章課題</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
